<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.login.LoginActivity">


        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_login"
            android:contentDescription="@string/content_description_login_background" />


        <TextView
            android:id="@+id/label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@drawable/bg_card"
            android:backgroundTint="@color/transparentWhite"
            android:fontFamily="sans-serif-light"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/app_name_without_plus"
            android:textColor="@color/white"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background" />

        <Button
            android:id="@+id/bt_continue_offline"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:elevation="0dp"
            android:text="@string/button_continue_offline"
            android:textAppearance="@style/ButtonTextStyle"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_sign_up" />

        <Button
            android:id="@+id/bt_sign_up"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:elevation="0dp"
            android:text="@string/button_don_t_have_an_account"
            android:textAppearance="@style/ButtonTextStyle"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/bt_continue_offline"
            app:layout_constraintEnd_toEndOf="@+id/bt_continue_offline"
            app:layout_constraintStart_toStartOf="@+id/bt_continue_offline"
            app:layout_constraintTop_toBottomOf="@+id/bt_google_sign_in" />

        <Button
            android:id="@+id/bt_sign_in"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/grey400"
            android:text="@string/button_sign_in"
            android:textAppearance="@style/ButtonTextStyle"
            app:layout_constraintBottom_toTopOf="@+id/bt_google_sign_in"
            app:layout_constraintEnd_toEndOf="@+id/email_and_password"
            app:layout_constraintStart_toStartOf="@+id/email_and_password"
            app:layout_constraintTop_toBottomOf="@+id/bt_forgot_password" />

        <Button
            android:id="@+id/bt_forgot_password"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:elevation="0dp"
            android:text="@string/label_forgot_your_password"
            android:textAppearance="@style/ButtonTextStyle"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/bt_sign_in"
            app:layout_constraintStart_toStartOf="@+id/bt_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/email_and_password" />


        <include
            android:id="@+id/email_and_password"
            layout="@layout/layout_email_and_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintLeft_toLeftOf="@id/label_title"
            app:layout_constraintRight_toRightOf="@id/label_title"
            app:layout_constraintTop_toBottomOf="@+id/label_title" />


        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/bt_google_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/bt_sign_in"
            app:layout_constraintStart_toStartOf="@+id/bt_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/bt_sign_in" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>