<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:context=".ui.signUp.SignUpActivity">

        <Button
            android:id="@+id/bt_sign_up"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/button_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/email_and_password"
            app:layout_constraintStart_toStartOf="@+id/email_and_password"
            app:layout_constraintTop_toBottomOf="@+id/email_and_password" />

        <Button
            android:id="@+id/bt_already_have_account"
            style="@style/MyBorderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_already_have_an_account"
            app:layout_constraintEnd_toEndOf="@id/email_and_password"
            app:layout_constraintStart_toStartOf="@id/email_and_password"
            app:layout_constraintTop_toBottomOf="@+id/bt_sign_up" />


        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_login_background"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_login" />

        <TextView
            style="@style/AppLogoStyle"
            android:id="@+id/label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/logo_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background"/>

        <include
            android:id="@+id/email_and_password"
            layout="@layout/layout_email_and_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintLeft_toLeftOf="@id/label_title"
            app:layout_constraintRight_toRightOf="@id/label_title"
            app:layout_constraintTop_toBottomOf="@+id/label_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>